# ai-test

./: code_splitter.ipynb  common.py  langchain_test.ipynb  langchain_test.md  loader_web_page.ipynb  pyproject.toml  readme.md  test_chain.py  test_chain_ori.py
chroma_db/: chroma.sqlite3
doc/: 10月工作总结_lxt.md  AI_Agent.md  code_splitter.md  langchain_test.md  loader_web_page.md  基于RAG技术搭建本地知识库.md  基于auto-gpt的agent.md
src/: langchain_test.ipynb
src/loader/: git_loader.ipynb
