[tool.poetry]
name = "ai-test"
version = "0.1.0"
description = ""
authors = ["lixiantao <290790956@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.4"
langchain-community = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
