[tool.poetry]
name = "ai-test"
version = "0.1.0"
description = ""
authors = ["lixiantao <290790956@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
langchain = "^0.3.4"
langchain-community = "^0.3.3"
langchain-chroma = "^0.1.4"
bs4 = "^0.0.2"
langchain-unstructured = "^0.1.5"
unstructured = "^0.16.0"
gitpython = "^3.1.43"
langchain-experimental = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
